# WAREX

./: .gitignore  README.md
warehouse_ws/src/warehouse_interfaces/: CMakeLists.txt  package.xml
warehouse_ws/src/warehouse_interfaces/msg/: CheckpointInfo.msg  NetworkQuality.msg  RobotState.msg  RobotStatus.msg  TaskCompleted.msg  TaskStatus.msg
warehouse_ws/src/warehouse_interfaces/srv/: RegisterRobot.srv  RequestTask.srv
warehouse_ws/src/warehouse_robot/: package.xml  setup.cfg  setup.py
warehouse_ws/src/warehouse_robot/launch/: gazebo_warex.launch.py  warehouse_system.launch.py
warehouse_ws/src/warehouse_robot/test/: test_backend.py
warehouse_ws/src/warehouse_robot/warehouse_robot/: __init__.py  dashboard_server.py  gazebo_bridge.py  robot_core.py  simulation_engine.py  warehouse_graph.py
warehouse_ws/src/warehouse_robot/warehouse_robot/api/: __init__.py  gateway.py
warehouse_ws/src/warehouse_robot/warehouse_robot/battery/: __init__.py  battery_model.py
warehouse_ws/src/warehouse_robot/warehouse_robot/checkpoint/: __init__.py  checkpoint_manager.py
warehouse_ws/src/warehouse_robot/warehouse_robot/cloud/: __init__.py  cloud_persistence.py
warehouse_ws/src/warehouse_robot/warehouse_robot/config/: config_loader.py
warehouse_ws/src/warehouse_robot/warehouse_robot/core/: __init__.py  allocator_node_enhanced.py  robot_core_enhanced.py
warehouse_ws/src/warehouse_robot/warehouse_robot/digital_twin/: __init__.py  twin_feed.py  twin_updater.py
warehouse_ws/src/warehouse_robot/warehouse_robot/experiments/: __init__.py  experiment_runner.py
warehouse_ws/src/warehouse_robot/warehouse_robot/fault/: __init__.py  fault_manager.py
warehouse_ws/src/warehouse_robot/warehouse_robot/logging/: __init__.py  structured_logger.py
warehouse_ws/src/warehouse_robot/warehouse_robot/metrics/: __init__.py  metrics_backend.py
warehouse_ws/src/warehouse_robot/warehouse_robot/network/: __init__.py  network_simulator.py
warehouse_ws/src/warehouse_robot/warehouse_robot/scheduling/: __init__.py  battery_aware_scheduler.py
warehouse_ws/src/warehouse_robot/worlds/: warex_warehouse.world
(+55 files in other folders)
