cmake_minimum_required(VERSION 3.8)
project(warehouse_interfaces)

find_package(ament_cmake REQUIRED)
find_package(rosidl_default_generators REQUIRED)
find_package(std_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)

rosidl_generate_interfaces(${PROJECT_NAME}
  "msg/RobotState.msg"
  "msg/RobotStatus.msg"
  "msg/TaskStatus.msg"
  "msg/TaskCompleted.msg"
  "msg/CheckpointInfo.msg"
  "msg/NetworkQuality.msg"
  "srv/RegisterRobot.srv"
  "srv/RequestTask.srv"
  DEPENDENCIES std_msgs geometry_msgs
)

ament_export_dependencies(rosidl_default_runtime)
ament_package()