<?xml version="1.0"?>
<package format="3">
  <name>warehouse_robot</name>
  <version>1.0.0</version>
  <description>Warehouse cloud robotics backend</description>

  <maintainer email="samiksha@todo.todo">samiksha</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>warehouse_interfaces</depend>

  <exec_depend>python3-fastapi</exec_depend>
  <exec_depend>python3-uvicorn</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>